css/style.css
:root {
  font-size: 100%;
  line-height: 1.3;
  font-family: "GerstnerProgWebRegular";
}

body {
  background: black;
  color: white;
  padding: 0.5rem 1rem 0;
}

header {
  display: flex;
  justify-content: space-between;
}

header h1 {
  font-size: 2rem;
  color: tomato;
  font-family: "GerstnerProgWebMedium";
}

header a { text-decoration: none; }

a { color: unset; }

.language-divider {margin: 0 0.875rem; }

h1, h2, h3, h4, h5, h6,
p, ul, ol, blockquote {
  margin-bottom: 1rem;
}

ul, ol {
  padding-left: 0.875rem;
}

.no-list {
  list-style: none;
  padding: 0;
}

h2, .uppercase {
  text-transform: uppercase;
  font-feature-settings: 'cpsp' on, 'case' on;
}

h2 {
  letter-spacing: 0.0625rem;
  color: tomato;
}

em, i {
    font-family: "GerstnerProgWebItalic";
}

#examples {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 50vh;
}

#slider {
  margin: 0;
  position: fixed;
  bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  display: flex;
}

.slider-item {
  min-width: 50vw;
  display: inline-block;
  scroll-snap-align: center;
  border-right: 1px solid black;
}

img { width: 100%; }

aside#desktop-nothing { display: none; }

@media (min-width: 800px) {
  header, main, footer, #examples { display: none;}
  aside#desktop-nothing {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100vw;
    position: absolute;
    top: 0; left: 0;
    font-size: 200%;
  }

}

